@@ -1,3 +1,11 @@
+Sun Dec 21 04:23:03 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfidl-generator.cc sfidl-module.cc testidl.idl: Removed support for
+	generic PSpec type.
+
+	* sfidl-parser.*: Removed support for generic PSpec type. Fixed
+	#include "/some/absolute/path.idl".
+
 Sat Dec 20 20:56:29 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-cxx.*: Support properties. Generate proper implamantations for
